@@ -1,3 +1,4 @@
+* Add field currency_date to set the date for the rate calculation
 * Change get_move_line on Invoice Line and Tax to return a list of values
   instead of values
 
